--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,12 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : about Kuteken
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : Kuteken
+  github : kuteken
+  twitter : kuteken
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -100,7 +98,7 @@ JB :
   analytics :
     provider : google 
     google : 
-        tracking_id : 'UA-123-12'
+        tracking_id : 'UA-45123276-1'
     getclicky :
       site_id : 
     mixpanel :
